# dolphin

./: .gitignore  CMakeLists.txt  Readme.md  memorywatcher_test.py
Source/: dolphin-emu.sln
Source/Core/: CMakeLists.txt
Source/Core/Common/GL/GLInterface/: GLInterface.cpp
Source/Core/Core/: Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  MemoryWatcher.cpp  MemoryWatcher.h  Movie.cpp
Source/Core/Core/HW/: VideoInterface.cpp
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp
Source/Core/DolphinWX/: CMakeLists.txt  ControllerConfigDiag.cpp  DolphinWX.vcxproj  Frame.h  MainNoGUI.cpp
Source/Core/DolphinWX/Config/: InterfaceConfigPane.cpp
Source/Core/InputCommon/: CMakeLists.txt  InputCommon.vcxproj  InputCommon.vcxproj.filters
Source/Core/InputCommon/ControllerInterface/Pipes/: Pipes.cpp  Pipes.h
Source/Core/UICommon/: CMakeLists.txt  X11Utils.cpp
Source/Core/VideoBackends/Null/: CMakeLists.txt  PixelShaderCache.cpp  PixelShaderCache.h  Render.cpp  VertexManager.cpp  VertexShaderCache.cpp  VertexShaderCache.h  main.cpp
Source/Core/VideoBackends/OGL/: CMakeLists.txt
Source/Core/VideoBackends/Software/: CMakeLists.txt
Source/Core/VideoCommon/: AVIDump.cpp  VideoBackendBase.cpp
